JNG-3631 Add simple import and model namespace export resolution.